tests/paczka1/fuzzy1/46180293.err
Error in line 1: cUpZICPdoq A654 43,5
Error in line 22: gqznPBnfmo A26 80,2
Error in line 34: KRF9 A26 94,98
